[package]
name = "crystal"
version = "0.0.0"
authors = ["Jacob Humphrey <jacob.ryan.humphrey@gmail.com>"]
publish = false

[dependencies]
getopts = "*"
libc = "*"
glob = "*"
env_logger = "*"
log = "*"
libarchive = "*"
# time = "0.1"
curl = { git = "https://github.com/alexcrichton/curl-rust.git" }

[workspace]
