[package]
name = "crystal"
version = "0.0.0"
authors = ["Jacob Humphrey <jacob.ryan.humphrey@gmail.com>"]
publish = false

[dependencies]
getopts = "0.2.17"
libc = "0.2.39"
glob = "0.2.11"
env_logger = "0.5.5"
log = "0.4.1"
libarchive = "0.1.1"
humantime = "1.1.1"
# time = "0.1"
curl = { git = "https://github.com/alexcrichton/curl-rust.git" }

[workspace]
